--- a/blog/views/posts/new.ejs
+++ b/blog/views/posts/new.ejs
@@ -3,6 +3,7 @@
   <form action="/posts/create" method='post'>
     <input type="text" name="title">
     <input type="text" name="body">
+    <input type="hidden" name="_csrf" value="<%= csrftoken %>" />
     <input type="submit" value="投稿する">
   </form>
   <p><a href="/">もどる</a></p>
